Fixed overflow in login page

--- a/frontend/src/styles/SlidingLoginForm.css
+++ b/frontend/src/styles/SlidingLoginForm.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: calc(100vh - 53px);
     width: 100%;
     background-color: #f6f5f7;
     font-family: 'Montserrat', sans-serif;
